LiteHtmlSharp/Interop/lh_api.cs

// Generated by ClangSharp 21.1.8.4 and normalize-bindings.py.
using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

namespace LiteHtmlSharp.Interop;

public partial struct lh_document
{
}

[StructLayout(LayoutKind.Explicit, Size = 4)]
public partial struct lh_color
{
    [FieldOffset(0)] private uint alignment;
    [FieldOffset(0)] public byte r;
    [FieldOffset(1)] public byte g;
    [FieldOffset(2)] public byte b;
    [FieldOffset(3)] public byte a;
}

public partial struct lh_rect
{
    public float x;

    public float y;

    public float width;

    public float height;
}

public partial struct lh_radii
{
    public float top_left_x;

    public float top_left_y;

    public float top_right_x;

    public float top_right_y;

    public float bottom_right_x;

    public float bottom_right_y;

    public float bottom_left_x;

    public float bottom_left_y;
}

public partial struct lh_span
{
    public uint offset;

    public uint length;
}

public unsafe partial struct lh_sink
{
    public delegate* unmanaged[Cdecl]<void*, sbyte*, int, void> write;

    public void* ctx;
}

public unsafe partial struct lh_attr
{
    public sbyte* name;

    public sbyte* value;
}

public unsafe partial struct lh_font_desc
{
    public sbyte* family;

    public sbyte* emphasis_style;

    public float size;

    public int style;

    public int weight;

    public int decoration_line;

    public float decoration_thickness;

    public int decoration_thickness_predefined;

    public int decoration_thickness_units;

    public int decoration_style;

    public lh_color decoration_color;

    public lh_color emphasis_color;

    public int emphasis_position;

    // Native 64-bit trailing padding is supplied by CLR pointer alignment.
}

public partial struct lh_font_metrics
{
    public float font_size;

    public float height;

    public float ascent;

    public float descent;

    public float x_height;

    public float ch_width;

    public float sub_shift;

    public float super_shift;

    public byte draw_spaces;

    public _padding_e__FixedBuffer padding;

    [InlineArray(3)]
    public partial struct _padding_e__FixedBuffer
    {
        public byte e0;
    }
}

public partial struct lh_media_features
{
    public int type;

    public float width;

    public float height;

    public float device_width;

    public float device_height;

    public int color;

    public int color_index;

    public int monochrome;

    public float resolution;
}

public partial struct lh_border
{
    public float width;

    public int style;

    public lh_color color;
}

public partial struct lh_borders
{
    public lh_border left;

    public lh_border top;

    public lh_border right;

    public lh_border bottom;

    public lh_radii radius;
}

public partial struct lh_layer
{
    public lh_rect border_box;

    public lh_rect clip_box;

    public lh_rect origin_box;

    public lh_radii radius;

    public int attachment;

    public int repeat;

    public byte is_root;

    public _padding_e__FixedBuffer padding;

    public float opacity;

    [InlineArray(3)]
    public partial struct _padding_e__FixedBuffer
    {
        public byte e0;
    }
}

public partial struct lh_color_stop
{
    public float offset;

    public lh_color color;

    public float hint;

    public byte has_hint;

    public _padding_e__FixedBuffer padding;

    [InlineArray(3)]
    public partial struct _padding_e__FixedBuffer
    {
        public byte e0;
    }
}

public partial struct lh_cmd_header
{
    public uint type;

    public uint size;
}

public partial struct lh_cmd_solid_fill
{
    public lh_layer layer;

    public lh_color color;
}

public partial struct lh_cmd_linear_gradient
{
    public lh_layer layer;

    public float x0;

    public float y0;

    public float x1;

    public float y1;

    public lh_span stops;

    public int color_space;

    public int hue_interp;
}

public partial struct lh_cmd_radial_gradient
{
    public lh_layer layer;

    public float cx;

    public float cy;

    public float rx;

    public float ry;

    public lh_span stops;

    public int color_space;

    public int hue_interp;
}

public partial struct lh_cmd_conic_gradient
{
    public lh_layer layer;

    public float cx;

    public float cy;

    public float angle;

    public float radius;

    public lh_span stops;

    public int color_space;

    public int hue_interp;
}

public partial struct lh_cmd_image
{
    public lh_layer layer;

    public lh_span url;

    public lh_span base_url;
}

public partial struct lh_cmd_text
{
    public lh_rect pos;

    public lh_color color;

    public uint padding;

    public nuint font;

    public lh_span utf8;
}

public partial struct lh_cmd_borders
{
    public lh_borders borders;

    public lh_rect pos;

    public byte root;

    public _padding_e__FixedBuffer padding;

    [InlineArray(3)]
    public partial struct _padding_e__FixedBuffer
    {
        public byte e0;
    }
}

public partial struct lh_cmd_list_marker
{
    public lh_rect pos;

    public lh_color color;

    public int marker_type;

    public int index;

    public uint padding;

    public nuint font;

    public lh_span image;

    public lh_span baseurl;
}

public partial struct lh_cmd_set_clip
{
    public lh_rect pos;

    public lh_radii radius;
}

public partial struct lh_cmd_push_transform
{
    public _m_e__FixedBuffer m;

    [InlineArray(16)]
    public partial struct _m_e__FixedBuffer
    {
        public float e0;
    }
}

public unsafe partial struct lh_layout_entry
{
    public sbyte* structure;

    public sbyte* field;

    public uint size;

    public uint offset;
}

public unsafe partial struct lh_host
{
    public void* user;

    public delegate* unmanaged[Cdecl]<void*, lh_font_desc*, lh_font_metrics*, nuint> create_font;

    public delegate* unmanaged[Cdecl]<void*, nuint, void> delete_font;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, nuint, float> text_width;

    public delegate* unmanaged[Cdecl]<void*, float, float> pt_to_px;

    public delegate* unmanaged[Cdecl]<void*, float> default_font_size;

    public delegate* unmanaged[Cdecl]<void*, lh_sink*, void> default_font_name;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, sbyte*, byte, void> load_image;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, sbyte*, float*, float*, void> get_image_size;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, void> set_caption;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, void> set_base_url;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, void> set_cursor;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, nuint, void> on_anchor_click;

    public delegate* unmanaged[Cdecl]<void*, nuint, byte> on_element_click;

    public delegate* unmanaged[Cdecl]<void*, nuint, int, void> on_mouse_event;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, int, lh_sink*, void> transform_text;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, sbyte*, lh_sink*, lh_sink*, void> import_css;

    public delegate* unmanaged[Cdecl]<void*, lh_rect*, void> get_viewport;

    public delegate* unmanaged[Cdecl]<void*, lh_media_features*, void> get_media_features;

    public delegate* unmanaged[Cdecl]<void*, lh_sink*, lh_sink*, void> get_language;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, byte> should_create_element;

    public delegate* unmanaged[Cdecl]<void*, sbyte*, lh_attr*, int, float*, float*, int> create_element;

    public delegate* unmanaged[Cdecl]<void*, lh_rect*, void> request_redraw;
}

public enum lh_command_type : uint
{
    LH_CMD_SOLID_FILL = 1,
    LH_CMD_LINEAR_GRADIENT = 2,
    LH_CMD_RADIAL_GRADIENT = 3,
    LH_CMD_CONIC_GRADIENT = 4,
    LH_CMD_IMAGE = 5,
    LH_CMD_TEXT = 6,
    LH_CMD_BORDERS = 7,
    LH_CMD_LIST_MARKER = 8,
    LH_CMD_SET_CLIP = 9,
    LH_CMD_DEL_CLIP = 10,
    LH_CMD_PUSH_TRANSFORM = 11,
    LH_CMD_POP_TRANSFORM = 12,
}

public static unsafe partial class NativeMethods
{
    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint lh_abi_version();

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_abi_layout(lh_layout_entry** entries, int* count);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial lh_document* lh_document_create(lh_host* host);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_document_destroy(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_load(lh_document* doc, sbyte* html, sbyte* master_css, sbyte* user_css);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial float lh_document_render(lh_document* doc, float max_width);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_document_draw(lh_document* doc, float x, float y, lh_rect* clip);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_document_display_list(lh_document* doc, byte** stream, uint* stream_len, byte** blob, uint* blob_len);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial float lh_document_width(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial float lh_document_height(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_on_mouse_over(lh_document* doc, float x, float y, float client_x, float client_y);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_on_lbutton_down(lh_document* doc, float x, float y, float client_x, float client_y);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_on_lbutton_up(lh_document* doc, float x, float y, float client_x, float client_y);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_on_mouse_leave(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_media_changed(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_animations_active(lh_document* doc);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial double lh_document_next_animation_delay(lh_document* doc, lh_rect* visible, double cadence);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial double lh_document_render_frame(lh_document* doc, float max_width, double milliseconds, lh_rect* visible, double cadence, float* rendered_width, byte* active);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial nuint lh_document_element_at(lh_document* doc, float x, float y);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial nuint lh_document_element_at_client(lh_document* doc, float x, float y, float client_x, float client_y);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial byte lh_document_custom_element_box(lh_document* doc, int id, lh_rect* @out);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_document_set_time(lh_document* doc, double milliseconds);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial nuint lh_element_get_parent(lh_document* doc, nuint el);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_element_get_attr(lh_document* doc, nuint el, sbyte* name, lh_sink* @out);

    [LibraryImport("LiteHtmlLib")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial void lh_element_get_tag(lh_document* doc, nuint el, lh_sink* @out);
}

[System.Runtime.InteropServices.StructLayout(System.Runtime.InteropServices.LayoutKind.Sequential)]
public struct lh_cmd_push_opacity { public float opacity; }
